Enhance application branding and user experience by updating the index.html title and description, integrating the Poppins font for improved typography, and adding a new IdeasPage route. Implement global context management in the AccountTracker component, and refine the Dashboard layout with a new action button. Update server-side Twitter OAuth handling and session management for better user authentication.

--- a/server/src/package.json
+++ b/server/src/package.json
@@ -13,7 +13,8 @@
     "twitter-api-v2": "^1.15.2",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.0",
-    "openai": "^4.0.0"
+    "openai": "^4.0.0",
+    "express-session": "^1.17.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
